--- a/app/src/main/res/layout/activity_display_mhs.xml
+++ b/app/src/main/res/layout/activity_display_mhs.xml
@@ -1,9 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplayMhs">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="370dp"
+        android:paddingLeft="10sp"
+        android:paddingTop="10sp"
+        android:paddingRight="100sp"
+        android:paddingBottom="100sp">
+
+        <TextView
+            android:id="@+id/tvNIM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tvName"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="12dp"
+            android:layout_marginBottom="85dp"
+            android:text="@string/nim"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <EditText
+            android:id="@+id/etNIM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:inputType="text"/>
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tvNIM"
+            android:layout_alignBottom="@+id/tvPhone"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="85dp"
+            android:text="@string/name"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etNIM"
+            android:layout_alignLeft="@+id/etNIM"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="40dp"
+            android:ems="10"
+            android:inputType="text"/>
+
+        <TextView
+            android:id="@+id/tvPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tvNIM"
+            android:layout_alignBottom="@+id/etPhone"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/phone"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <EditText
+            android:id="@+id/etPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etName"
+            android:layout_alignLeft="@+id/etName"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="40dp"
+            android:ems="10"
+            android:inputType="phone|text"/>
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etPhone"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="137dp"
+            android:layout_marginLeft="137dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="50dp"
+            android:text="@string/save"/>
+
+    </RelativeLayout>
+</ScrollView>
