--- a/app/src/main/res/layout/activity_display_mhs.xml
+++ b/app/src/main/res/layout/activity_display_mhs.xml
@@ -92,7 +92,9 @@
             android:layout_marginLeft="137dp"
             android:layout_marginTop="60dp"
             android:layout_marginBottom="50dp"
-            android:text="@string/save"/>
+            android:text="@string/save"
+            android:onClick="run"
+            tools:ignore="onClick"/>
 
     </RelativeLayout>
 </ScrollView>
