--- a/app/src/main/res/layout/activity_display_mhs.xml
+++ b/app/src/main/res/layout/activity_display_mhs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".DisplayMhs">
 
     <RelativeLayout
